Revert "Merge branch 'rebuild' of https://github.com/oldjang/FTPClient into rebuild"
This reverts commit fc7d26714771f3abe7b4c5b2df84099d3093383c, reversing
changes made to 6c1cb81c199a57d6d9ae53df5a39489838009cc0.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -139,16 +139,10 @@
       <item>
        <widget class="QWidget" name="downloadWidget" native="true">
         <layout class="QGridLayout" name="gridLayout">
-         <item row="0" column="0" colspan="3">
-          <widget class="QLabel" name="downLoadLabel">
+         <item row="3" column="2">
+          <widget class="QPushButton" name="downloadButton">
            <property name="text">
-            <string>&lt;h2&gt;DownLoad&lt;/h2&gt;</string>
-           </property>
-           <property name="textFormat">
-            <enum>Qt::AutoText</enum>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignCenter</set>
+            <string>Download</string>
            </property>
           </widget>
          </item>
@@ -169,10 +163,10 @@
            </item>
           </layout>
          </item>
-         <item row="3" column="2">
-          <widget class="QPushButton" name="downloadButton">
+         <item row="1" column="0">
+          <widget class="QLabel" name="listLabel">
            <property name="text">
-            <string>Download</string>
+            <string>FileList</string>
            </property>
           </widget>
          </item>
@@ -183,15 +177,21 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="listLabel">
+         <item row="2" column="0" colspan="3">
+          <widget class="QListView" name="fileList"/>
+         </item>
+         <item row="0" column="0" colspan="3">
+          <widget class="QLabel" name="downLoadLabel">
            <property name="text">
-            <string>FileList</string>
+            <string>&lt;h2&gt;DownLoad&lt;/h2&gt;</string>
+           </property>
+           <property name="textFormat">
+            <enum>Qt::AutoText</enum>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
            </property>
           </widget>
-         </item>
-         <item row="2" column="0" colspan="3">
-          <widget class="QTextBrowser" name="fileList"/>
          </item>
         </layout>
        </widget>
