--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -198,9 +198,39 @@
       </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_5">
-        <property name="spacing">
-         <number>120</number>
-        </property>
+        <item>
+         <widget class="QWidget" name="widget_2" native="true">
+          <layout class="QGridLayout" name="gridLayout_2">
+           <item row="0" column="0" colspan="2">
+            <widget class="QLabel" name="folderLabel">
+             <property name="text">
+              <string>&lt;h2&gt;FileFolder&lt;/h2&gt;</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0" colspan="2">
+            <widget class="QLineEdit" name="folderText"/>
+           </item>
+           <item row="2" column="0">
+            <widget class="QPushButton" name="returnButton">
+             <property name="text">
+              <string>返回上一级</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QPushButton" name="cdButton">
+             <property name="text">
+              <string>进入文件夹</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
         <item>
          <widget class="QWidget" name="uploadWidget" native="true">
           <layout class="QVBoxLayout" name="verticalLayout_4">
