--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -21,7 +21,13 @@
        <item>
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_5">
+          <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="1,1,1">
+           <property name="leftMargin">
+            <number>20</number>
+           </property>
+           <property name="rightMargin">
+            <number>20</number>
+           </property>
            <item>
             <layout class="QHBoxLayout" name="horizontalLayout">
              <property name="spacing">
@@ -80,9 +86,9 @@
           </layout>
          </item>
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,1">
            <property name="spacing">
-            <number>40</number>
+            <number>200</number>
            </property>
            <property name="leftMargin">
             <number>40</number>
@@ -93,14 +99,7 @@
            <item>
             <widget class="QPushButton" name="connectButton">
              <property name="text">
-              <string>Connect</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="loginButton">
-             <property name="text">
-              <string>Log in</string>
+              <string>Login</string>
              </property>
             </widget>
            </item>
@@ -173,13 +172,6 @@
           <widget class="QPushButton" name="downloadButton">
            <property name="text">
             <string>Download</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="2">
-          <widget class="QPushButton" name="listButton">
-           <property name="text">
-            <string>List</string>
            </property>
           </widget>
          </item>
@@ -304,7 +296,7 @@
      <x>0</x>
      <y>0</y>
      <width>789</width>
-     <height>23</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
