--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>FTPClient</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout_6" stretch="1,1,3">
+   <layout class="QVBoxLayout" name="verticalLayout_6" stretch="2,3,15">
     <item>
      <widget class="QWidget" name="userWidget" native="true">
       <layout class="QHBoxLayout" name="horizontalLayout_6">
@@ -137,8 +137,8 @@
      <layout class="QHBoxLayout" name="horizontalLayout_8" stretch="1,1">
       <item>
        <widget class="QWidget" name="downloadWidget" native="true">
-        <layout class="QGridLayout" name="gridLayout">
-         <item row="0" column="0" colspan="3">
+        <layout class="QVBoxLayout" name="verticalLayout_7">
+         <item>
           <widget class="QLabel" name="downLoadLabel">
            <property name="text">
             <string>&lt;h2&gt;DownLoad&lt;/h2&gt;</string>
@@ -151,7 +151,17 @@
            </property>
           </widget>
          </item>
-         <item row="3" column="0" colspan="2">
+         <item>
+          <widget class="QLabel" name="listLabel">
+           <property name="text">
+            <string>FileList</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QListWidget" name="fileList"/>
+         </item>
+         <item>
           <layout class="QHBoxLayout" name="horizontalLayout_7">
            <property name="spacing">
             <number>0</number>
@@ -168,61 +178,18 @@
            </item>
           </layout>
          </item>
-         <item row="3" column="2">
+         <item>
           <widget class="QPushButton" name="downloadButton">
            <property name="text">
             <string>Download</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="listLabel">
-           <property name="text">
-            <string>FileList</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="0" colspan="3">
-          <widget class="QTextBrowser" name="fileList"/>
-         </item>
         </layout>
        </widget>
       </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_5">
-        <item>
-         <widget class="QWidget" name="widget_2" native="true">
-          <layout class="QGridLayout" name="gridLayout_2">
-           <item row="0" column="0" colspan="2">
-            <widget class="QLabel" name="folderLabel">
-             <property name="text">
-              <string>&lt;h2&gt;FileFolder&lt;/h2&gt;</string>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignCenter</set>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0" colspan="2">
-            <widget class="QLineEdit" name="folderText"/>
-           </item>
-           <item row="2" column="0">
-            <widget class="QPushButton" name="returnButton">
-             <property name="text">
-              <string>返回上一级</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="QPushButton" name="cdButton">
-             <property name="text">
-              <string>进入文件夹</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </widget>
-        </item>
         <item>
          <widget class="QWidget" name="uploadWidget" native="true">
           <layout class="QVBoxLayout" name="verticalLayout_4">
